@@ -1,4 +1,4 @@
-package ArrayList;
+package ArrayList_learning;
 
 import java.util.*;
 
@@ -10,32 +10,43 @@ public class ArrayListEmp {
         list.add(new Emp(1, "Anis"));
         Emp e2 = new Emp(2, "Liana");
         list.add(e2);
-        list.add(new Emp(3, "Alokanonda")); // it will add Item3 to the third position of array list
+        list.add(new Emp(3, "Alokanonda")); // it will add employee_no 3 to the '2'-index of the ArrayList
         list.add(new Emp(4, "Radhika"));
+
         // Display the contents of the array list
-        System.out.println(STR."The arraylist contains the following elements:\n \{list}");
+        System.out.println(STR."(L17)The arraylist contains the following elements:\n \{list}");
+
         //Checking index of an item
-        int pos = list.indexOf(new Emp("Liana"));
-        System.out.println(STR."The index of Liana is: \{pos}");
+        int pos = list.indexOf(new Emp("Lianaaaaaaaaa"));
+        System.out.println(STR."(L21)The index of Lianaaaaaaaaa is: \{pos}");
+        pos = list.indexOf(new Emp("Liana"));
+        System.out.println(STR."(L23)The index of Liana is: \{pos}");
+
         //Checking if array list is empty
         boolean check = list.isEmpty();
-        System.out.println(STR."Checking if the arraylist is empty: \{check}");
+        System.out.println(STR."(L27)Checking if the arraylist is empty: \{check}");
+
         // Getting the size of the list
         int size = list.size();
-        System.out.println(STR."The size of the list is: \{size}");
+        System.out.println(STR."(L31)The size of the list is: \{size}");
+
         // Checking if an element is included to the list
-        boolean element = list.contains(new Emp(7));
-        System.out.println(STR."Checking if the arraylist contains the object Item5: \{element}");
+        boolean element = list.contains(new Emp(7));  // CAREFUL
+        System.out.println(STR."Checking if the arraylist contains EMPLOYEE NO 7: \{element}");
+
+
         // Getting the element in a specific position
-        Emp item = list.get(0);
-        System.out.println(STR."The item is the index 0 is: \{item}");
+        Emp item = list.getFirst();
+        System.out.println(STR."(L40)The item is the index 0 is: \{item}");
+
         // Retrieve elements from the arraylist
         // 1st way: loop using index and size list
-        System.out.println("Retrieving items with loop using index and size list");
+        System.out.println("(L44)Retrieving items with loop using index and size list");
         for (int i = 0; i < list.size(); i++) {
             System.out.println(STR."Index: \{i} - Item: \{list.get(i)}");
         }
-        // 2nd way:using foreach loop
+
+        // 2nd way:using for-each loop
         System.out.println("Retrieving items using foreach loop");
         for (Emp e : list) {
             System.out.print(e);
@@ -48,6 +59,7 @@ public class ArrayListEmp {
         for (Emp emp : list) {
             System.out.println(STR."Item is: \{emp}");
         }
+
         // Replacing an element
         list.set(1, new Emp("NewItem1"));
         System.out.println(STR."The arraylist after the replacement is: \{list}");
